Исправлены Спаны и альты

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.png">
   </head>
   <body>
     <header class="page-header main-header">
 
       <nav class="navigation">
-        <div class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице" width="139" height="70" > </div>
+        <div class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице." width="139" height="70" > </div>
         <ul class="navigation_list navigation_pages">
           <li class="navigation_item nav-main curent-page-main">
             <a class="navigation_link" href="index.html"> Главная </a>
@@ -27,14 +27,14 @@
           <li class="navigation_item interfice-search">
             <a class="navigation_link" href="#">
               <span class="visually-hidden">Поиск</span>
-              <img src="images/icons/search.svg" alt="Кнопка поиска" width="19" height="19">
+              <img src="images/icons/search.svg" alt="Кнопка поиска." width="19" height="19">
             </a>
           </li>
           <li class="navigation_item interfice-favorites">
             <a class="navigation_link" href="#">
               <span class="number-of-favorite">12</span>
               <span class="visually-hidden">Избранное</span>
-            <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17">
+            <img src="images/icons/favorite.svg" alt="Кнопка избранного." width="19" height="17">
             </a>
           </li>
           <li class="navigation_item interfice-go">
@@ -47,7 +47,7 @@
     <main class="main_index main-container">
       <div class="page-container">
         <h1 class="visually-hidden"> Welcome to Sedona </h1>
-        <img src="images/Wellcome-photo.jpg" alt="Фон приветственной фотографии Седоны" class="welcome_photo" width="1200" height="485">
+        <img src="images/Wellcome-photo.jpg" alt="Фон приветственной фотографии Седоны." class="welcome_photo" width="1200" height="485">
         <div class="advantages">
           <h2 class="sedona_short_description"> Седона — небольшой городок в Аризоне,<br> заслуживающий большего! </h2>
           <p class="advantages_intro">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -61,7 +61,7 @@
               <p class="advantages_description advantages_description_white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="advantages_photo-wrapper">
-              <img class="advantages_photo" src="images/advanteges/photo-1.jpg" width="800" height="100%" alt="Фотография городка">
+              <img class="advantages_photo" src="images/advanteges/photo-1.jpg" width="800" height="100%" alt="Фотография городка.">
             </div>
 
           <li class="advantages_item advantages-soft-blue">
@@ -101,7 +101,7 @@
               <p class="advantages_description advantages_description_white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <div class="advantages_photo-wrapper advantages_photo-wrapper-bridge">
-              <img class="advantages_photo" src="images/advanteges/photo-2.jpg" width="800" height="100%" alt="Фотография моста дьявола">
+              <img class="advantages_photo" src="images/advanteges/photo-2.jpg" width="800" height="100%" alt="Фотография моста дьявола.">
             </div>
           </li>
 
@@ -115,7 +115,7 @@
           <li class="advantages_item advantages-soft-blue-tansporent">
             <div class="advantages_block">
               <div class="iconed-advantages-description-wrapper">
-                <img class="advantages_icon" src="images/icons/home-icon.svg" alt="иконка жилья" width="76" height="72">
+                <img class="advantages_icon" src="images/icons/home-icon.svg" alt="иконка жилья." width="76" height="72">
                 <h3 class="advantages_title">Жильё</h3>
                 <p class="advantages_description"> Рекомендуем пожить <br> в настоящем мотеле,<br> всё как в кино!</p>
               </div>
@@ -125,7 +125,7 @@
           <li class="advantages_item">
             <div class="advantages_block">
               <div class="iconed-advantages-description-wrapper">
-                <img class="advantages_icon" src="images/icons/food.svg" alt="иконка еды" width="75" height="70">
+                <img class="advantages_icon" src="images/icons/food.svg" alt="иконка еды." width="75" height="70">
                 <h3 class="advantages_title">Еда</h3>
                 <p class="advantages_description"> Всегда заказывайте <br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
               </div>
@@ -135,7 +135,7 @@
           <li class="advantages_item advantages-soft-blue-tansporent">
             <div class="advantages_block">
               <div class="iconed-advantages-description-wrapper">
-                <img class="advantages_icon" src="images/icons/souvenirs-icon.svg" alt="иконка сувениров" width="65" height="76">
+                <img class="advantages_icon" src="images/icons/souvenirs-icon.svg" alt="иконка сувениров." width="65" height="76">
                 <h3 class="aadvantages_title">Сувениры</h3>
                 <p class="advantages_description"> Не только китайского,<br> но и настоящего местного<br> производства!</p>
               </div>
