--- a/catalog.html
+++ b/catalog.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.png">
   </head>
   <body>
     <header class="page-header main-header">
 
       <nav class="navigation">
-        <div class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице" width="139" height="70" > </div>
+        <div class="logo_index"> <img src="images/header-logo.svg" alt="Логотип городка Седона на главной странице." width="139" height="70" > </div>
         <ul class="navigation_list navigation_pages">
           <li class="navigation_item nav-main"> <a class="navigation_link" href="index.html"> Главная </a> </li>
           <li class="navigation_item nav-about"> <a class="navigation_link" href="#"> О Седоне </a> </li>
           <li class="navigation_item nav-hotels curent-page-hotels"> <a class="navigation_link" href="catalog.html"> Гостиницы </a><div class="selected-catalog"></div> </li>
         </ul>
         <ul class="navigation_list navigation_interfice">
-          <li class="navigation_item interfice-search"> <a class="navigation_link" href="#"> <span class="visually-hidden">Поиск</span>
-            <img src="images/icons/search.svg" alt="Кнопка поиска" width="19" height="19"> </a> </li>
-            <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"><span class="number-of-favorite">12</span> <span class="visually-hidden">Избранное</span>
-              <img src="images/icons/favorite.svg" alt="Кнопка избранного" width="19" height="17"> </a> </li>
+          <li class="navigation_item interfice-search"> <a class="navigation_link" href="#"> <span class="visually-hidden">Поиск.</span>
+            <img src="images/icons/search.svg" alt="Кнопка поиска." width="19" height="19"> </a> </li>
+            <li class="navigation_item interfice-favorites"> <a class="navigation_link" href="#"><span class="number-of-favorite">12</span> <span class="visually-hidden">Избранное.</span>
+              <img src="images/icons/favorite.svg" alt="Кнопка избранного." width="19" height="17"> </a> </li>
           <li class="navigation_item interfice-go"> <a class="lets_go_button" href="#"> Хочу сюда! </a> </li>
         </ul>
       </nav>
@@ -33,8 +33,8 @@
 
             <h1 class="inner_header_title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
-                <li class="breadcrumbs_item breadcrumbs_item-home"><a href="index.html"> <img src="images/icons/main-icon.svg" alt="На главную"> </a></li>
-                <li class="breadcrumbs_item breadcrumbs_item-vector"><div class="vector-right"><span class="visually-hidden">Обозначение положения на сайте</span></div></li>
+                <li class="breadcrumbs_item breadcrumbs_item-home"><a href="index.html"> <img src="images/icons/main-icon.svg" alt="На главную" width="13px" height="13px"> </a></li>
+                <li class="breadcrumbs_item breadcrumbs_item-vector"><div class="vector-right"><span class="visually-hidden">Обозначение положения на сайте.</span></div></li>
                 <li class="breadcrumbs_item breadcrumbs_item-curen "><a href="#">Гостиницы</a></li>
             </ul>
         </div>
@@ -105,51 +105,51 @@
                       </select></div>
 
                       <div class="options_icons-wrapper">
-                      <a class="button button_bold button_table-view" href="#"> <img class="view-icon-image" src="images/icons/table-view.png" alt="Показать таблицей"> </a>
-                      <a class="button button_light button_card-view" href="#"> <img class="view-icon-image" src="images/icons/hotel-description_view.png" alt="Показать карточками"> </a>
-                      <a class="button button_light button_list-view" href="#"> <img class="view-icon-image" src="images/icons/list-view.png" alt="Показать списком" > </a>
+                      <a class="button button_bold button_table-view" href="#"> <img class="view-icon-image" width="16px" height="14px" src="images/icons/table-view.png" alt="Показать таблицей."> </a>
+                      <a class="button button_light button_card-view" href="#"> <img class="view-icon-image" width="16px" height="14px" src="images/icons/hotel-description_view.png" alt="Показать карточками."> </a>
+                      <a class="button button_light button_list-view" href="#"> <img class="view-icon-image" width="16px" height="14px" src="images/icons/list-view.png" alt="Показать списком." > </a>
 
                       </div>
                     </div>
                     <ul class="hotels-list">
-                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-1.jpg" alt="Фотография н отеля Amara Resort & Spa" width="300" height="212">
+                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-1.jpg" alt="Фотография отеля Amara Resort & Spa." width="300" height="212">
                         <h3 class="hotel_title">Amara Resort & Spa</h3></a>
                         <div class="card-content-wrapper">
                         <span class="hotel_type">Гостиница</span>
                         <span class="hotel_price">От 4000 ₽</span>
                         <a class="hotel_card_button-more button" href="#">подробнее</a>
                         <a class="hotel_card_button-favorite button" href="#">в избранное</a>
-                        <div class="four-stars stars"><span class="visually-hidden">Отель 4 звезды</span></div>
+                        <div class="four-stars stars"><span class="visually-hidden">Отель 4 звезды.</span></div>
                         <span class="rating">Рейтинг: 8,5</span></div> </li>
 
-                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-2.jpg" alt="Фотография у отеля Villas at Poco Diablo">
+                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-2.jpg" alt="Фотография отеля Villas at Poco Diablo." width="300" height="212">
                         <h3 class="hotel_title">Villas at Poco Diablo</h3></a>
                         <div class="card-content-wrapper">
                         <span class="hotel_type">Гостиница</span>
                         <span class="hotel_price">От 5000 ₽</span>
                         <a class="hotel_card_button-more button" href="#">подробнее</a>
                         <a class="hotel_card_button-favorite-chosed button" href="#">в избранном</a>
-                        <div class="four-stars stars"><span class="visually-hidden">Отель 4 звезды</span></div>
+                        <div class="four-stars stars"><span class="visually-hidden">Отель 4 звезды.</span></div>
                         <span class="rating">Рейтинг: 9,2</span></div> </li>
 
-                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-3.jpg" alt="Фотография у отеля Desert Quail Inn">
+                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-3.jpg" alt="Фотография отеля Desert Quail Inn." width="300" height="212">
                         <h3 class="hotel_title">Desert Quail Inn</h3></a>
                         <div class="card-content-wrapper">
                         <span class="hotel_type">Гостиница</span>
                         <span class="hotel_price">От 2500 ₽</span>
                         <a class="hotel_card_button-more button" href="#">подробнее</a>
                         <a class="hotel_card_button-favorite button" href="#">в избранное</a>
-                        <div class="three-stars stars"><span class="visually-hidden">Отель 3 звезды</span></div>
+                        <div class="three-stars stars"><span class="visually-hidden">Отель 3 звезды.</span></div>
                         <span class="rating">Рейтинг: 6,9</span></div></li>
 
-                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-4.jpg" alt="Фотография у отеля GreenTree Inn">
+                    <li class="hotel_card"> <a href="#" class="hotel_card_link"> <img src="images/hotels_catalog/hotel-4.jpg" alt="Фотография отеля GreenTree Inn." width="300" height="212">
                         <h3 class="hotel_title">GreenTree Inn</h3></a>
                         <div class="card-content-wrapper">
                         <span class="hotel_type">Гостиница</span>
                         <span class="hotel_price">От 1500 ₽</span>
                         <a class="hotel_card_button-more button" href="#">подробнее</a>
                         <a class="hotel_card_button-favorite button" href="#">в избранное</a>
-                        <div class="two-stars stars"><span class="visually-hidden">Отель 3 звезды</span></div>
+                        <div class="two-stars stars"><span class="visually-hidden">Отель 3 звезды.</span></div>
                         <span class="rating">Рейтинг: 5,0</span></div></li>
 
                 </ul>
@@ -197,9 +197,9 @@
       <div class="contact_us">        <section class="social">
         <h3 class="visually-hidden">Контакты</h3>
         <ul class="social_list">
-          <li class="social_list_item-vk"> <a class="button" href="https://vk.com/htmlacademy"> <svg class="vk-svg social-icon" aria-hidden="true" focusable="false" width="25" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.1 1c.2-.6 0-1-.8-1h-2.6c-.7 0-1 .3-1.1.7 0 0-1.4 3.2-3.3 5.3-.6.6-.9.8-1.2.8-.2 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.8-.9h-4c-.5 0-.8.3-.8.6 0 .6 1 .8 1 2.5V7c0 .8 0 1-.4 1-.9 0-3-3.2-4.3-6.9-.3-.7-.5-1-1.2-1H1.6C.8 0 .6.3.6.7c0 .7 1 4.1 4.2 8.6 2.2 3 5.2 4.7 8 4.7 1.7 0 1.9-.4 1.9-1v-2.3c0-.8.2-.9.7-.9.4 0 1 .2 2.6 1.7 1.8 1.7 2 2.5 3 2.5h2.7c.7 0 1.1-.4 1-1.1-.3-.7-1.2-1.8-2.3-3L20.6 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"/></svg><span class="visually-hidden">ВКонтакте</span></a></li>
-          <li class="social_list_item-yt"> <a class="button" href="tg://resolve?domain=htmlacademy"> <svg class="yt-svg social-icon" aria-hidden="true" focusable="false" width="18" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.8.1.8 6.2c-1 .5-1 1-.2 1.4l4.1 1.2 9.5-6c.5-.2.9 0 .5.2l-7.6 7-.3 4.2c.4 0 .6-.2.8-.4l2-2 4.1 3c.8.5 1.3.3 1.5-.6L18 1.4c.3-1.1-.4-1.6-1.1-1.3Z" /></svg> <span class="visually-hidden">Youtube</span></a></li>
-          <li class="social_list_item-tg"> <a class="button" href="https://www.youtube.com/user/htmlacademyru"> <svg class="tg-svg social-icon" aria-hidden="true" focusable="false" width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19 .5H3.4C1.6.5.3 2.1.3 3.9v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6 0 3.1-1.6 3.1-3.4V3.9C22.1 2.1 20.8.5 19 .5ZM8 13V5l7.3 4L8 13Z" /></svg> <span class="visually-hidden">Телеграм</span></a></li>
+          <li class="social_list_item-vk"> <a class="button" href="https://vk.com/htmlacademy"> <svg class="vk-svg social-icon" aria-hidden="true" focusable="false" width="25" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.1 1c.2-.6 0-1-.8-1h-2.6c-.7 0-1 .3-1.1.7 0 0-1.4 3.2-3.3 5.3-.6.6-.9.8-1.2.8-.2 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.8-.9h-4c-.5 0-.8.3-.8.6 0 .6 1 .8 1 2.5V7c0 .8 0 1-.4 1-.9 0-3-3.2-4.3-6.9-.3-.7-.5-1-1.2-1H1.6C.8 0 .6.3.6.7c0 .7 1 4.1 4.2 8.6 2.2 3 5.2 4.7 8 4.7 1.7 0 1.9-.4 1.9-1v-2.3c0-.8.2-.9.7-.9.4 0 1 .2 2.6 1.7 1.8 1.7 2 2.5 3 2.5h2.7c.7 0 1.1-.4 1-1.1-.3-.7-1.2-1.8-2.3-3L20.6 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"/></svg><span class="visually-hidden">ВКонтакте.</span></a></li>
+          <li class="social_list_item-yt"> <a class="button" href="tg://resolve?domain=htmlacademy"> <svg class="yt-svg social-icon" aria-hidden="true" focusable="false" width="18" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.8.1.8 6.2c-1 .5-1 1-.2 1.4l4.1 1.2 9.5-6c.5-.2.9 0 .5.2l-7.6 7-.3 4.2c.4 0 .6-.2.8-.4l2-2 4.1 3c.8.5 1.3.3 1.5-.6L18 1.4c.3-1.1-.4-1.6-1.1-1.3Z" /></svg> <span class="visually-hidden">Youtube.</span></a></li>
+          <li class="social_list_item-tg"> <a class="button" href="https://www.youtube.com/user/htmlacademyru"> <svg class="tg-svg social-icon" aria-hidden="true" focusable="false" width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19 .5H3.4C1.6.5.3 2.1.3 3.9v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6 0 3.1-1.6 3.1-3.4V3.9C22.1 2.1 20.8.5 19 .5ZM8 13V5l7.3 4L8 13Z" /></svg> <span class="visually-hidden">Телеграм.</span></a></li>
         </ul>
       </section>
       <address class="phonenumber"><a class="phonenumber-LINK" href="tel:+78128121212"> +7 (812) 812-12-12 </a> </address>
