--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
             <a class="navigation_link" href="catalog.html"> Гостиницы </a>
           </li>
         </ul>
-        <ul class="navigation_list navigation_interfice">
-          <li class="navigation_item interfice-search">
+        <ul class="navigation_list navigation_interface">
+          <li class="navigation_item interface-search">
             <a class="navigation_link" href="#">
               <span class="visually-hidden">Поиск</span>
               <img src="images/icons/search.svg" alt="Кнопка поиска." width="19" height="19">
             </a>
           </li>
-          <li class="navigation_item interfice-favorites">
+          <li class="navigation_item interface-favorites">
             <a class="navigation_link" href="#">
               <span class="number-of-favorite">12</span>
               <span class="visually-hidden">Избранное</span>
             <img src="images/icons/favorite.svg" alt="Кнопка избранного." width="19" height="17">
             </a>
           </li>
-          <li class="navigation_item interfice-go">
+          <li class="navigation_item interface-go">
             <a class="lets_go_button" href="#"> Хочу сюда! </a>
           </li>
         </ul>
@@ -74,7 +74,7 @@
             </div>
           </li>
 
-          <li class="advantages_item advantages-soft-blue-tansporent">
+          <li class="advantages_item advantages-soft-blue-transparent">
             <div class="advantages_block">
               <div class="advantages-description-soft-blue">
                 <h3 class="advantages_title">Красивая <br> дорога</h3>
@@ -112,7 +112,7 @@
             </div>
           </li>
 
-          <li class="advantages_item advantages-soft-blue-tansporent">
+          <li class="advantages_item advantages-soft-blue-transparent">
             <div class="advantages_block">
               <div class="iconed-advantages-description-wrapper">
                 <img class="advantages_icon" src="images/icons/home-icon.svg" alt="иконка жилья." width="76" height="72">
@@ -132,7 +132,7 @@
             </div>
           </li>
 
-          <li class="advantages_item advantages-soft-blue-tansporent">
+          <li class="advantages_item advantages-soft-blue-transparent">
             <div class="advantages_block">
               <div class="iconed-advantages-description-wrapper">
                 <img class="advantages_icon" src="images/icons/souvenirs-icon.svg" alt="иконка сувениров." width="65" height="76">
@@ -163,7 +163,7 @@
           <div class="newsletter-wrapper">
             <h2 class="newsletter_title">Подпишитесь на рассылку</h2>
             <p class="newsletter_description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
-            <div class="sub_modul-wrapper">
+            <div class="sub_module-wrapper">
               <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter_subscribe">
                 <input class="subscribe" type="email" placeholder="Ваш e-mail" name="newsletter-email" >
                 <button type="submit" class="subscribe_button">Подписаться</button>
@@ -228,7 +228,7 @@
       </div>
     </footer>
 
-    <div class="modal-container turn-off-modal">
+    <div class="modal-container turn-off-modal  visually-hidden">
         <div class="modal">
 
           <span class="closing-modal">
