Правки имен файлов и фокус инпута

--- a/catalog.html
+++ b/catalog.html
@@ -71,9 +71,10 @@
                       <fieldset class="catalog_filter_group accommodation_type">
                         <legend class="catalog_filter_title accommodation_type-title">Тип жилья:</legend>
                           <ul class="accommodation_type_list">
+
                             <li class="accommodation_type_list_item">
                               <label class="checkbox checkbox-type-ac checkbox-hot">
-                                <input class="control-input-ac visually-hidden" type="radio" name="accommodation" value="hotel">
+                                <input class="control-input-ac input-hot visually-hidden" type="radio" name="accommodation" value="hotel">
                                 <span class="control-radio control-radio-hot"></span>
                                 <span class="radio-option-description">Гостиница</span>
                               </label>
@@ -81,14 +82,15 @@
 
                             <li class="accommodation_type_list_item">
                               <label class="checkbox checkbox-type-ac checkbox-mot">
-                                <input class="control-input-ac visually-hidden" type="radio" name="accommodation" value="Motel">
-                                <span class="control-radio control-radio-mot"></span><span class="radio-option-description">Мотель</span>
+                                <input class="control-input-ac input-mot visually-hidden" type="radio" name="accommodation" value="Motel">
+                                <span class="control-radio control-radio-mot"></span>
+                                <span class="radio-option-description">Мотель</span>
                               </label>
                             </li>
 
                             <li class="accommodation_type_list_item">
                               <label class="checkbox checkbox-type-ac checkbox-app">
-                                <input class="control-input-ac visually-hidden" type="radio" name="accommodation" value="Apartments">
+                                <input class="control-input-ac input-ap visually-hidden" type="radio" name="accommodation" value="Apartments">
                                 <span class="control-radio control-radio-app"></span>
                                 <span class="radio-option-description">Апартаменты</span>
                               </label>
@@ -102,7 +104,8 @@
 
                     <div class="price-controls">
                       <label class="min-price">
-                        <input type="text" name="min-price" value="0"><span class="form-text-from"> от</span>
+                        <input type="text" name="min-price" value="0">
+                        <span class="form-text-from"> от</span>
                       </label>
                       <label class="max-price"><input type="text" name="max-price" value="9000">
                         <span class="form-text-to">до</span>
@@ -155,7 +158,7 @@
 
                     <ul class="hotels-list">
                       <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels_catalog/hotel-1.jpg" alt="Фотография отеля Amara Resort & Spa." width="300" height="212">
+                        <img src="images/hotels-catalog/hotel-1.jpg" alt="Фотография отеля Amara Resort & Spa." width="300" height="212">
                         <h3 class="hotel_title">Amara Resort & Spa</h3></a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
@@ -170,7 +173,7 @@
                       </li>
 
                       <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels_catalog/hotel-2.jpg" alt="Фотография отеля Villas at Poco Diablo." width="300" height="212">
+                        <img src="images/hotels-catalog/hotel-2.jpg" alt="Фотография отеля Villas at Poco Diablo." width="300" height="212">
                         <h3 class="hotel_title">Villas at Poco Diablo</h3></a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
@@ -185,7 +188,7 @@
                       </li>
 
                       <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels_catalog/hotel-3.jpg" alt="Фотография отеля Desert Quail Inn." width="300" height="212">
+                        <img src="images/hotels-catalog/hotel-3.jpg" alt="Фотография отеля Desert Quail Inn." width="300" height="212">
                         <h3 class="hotel_title">Desert Quail Inn</h3></a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
@@ -200,7 +203,7 @@
                       </li>
 
                       <li class="hotel_card"> <a href="#" class="hotel_card_link">
-                        <img src="images/hotels_catalog/hotel-4.jpg" alt="Фотография отеля GreenTree Inn." width="300" height="212">
+                        <img src="images/hotels-catalog/hotel-4.jpg" alt="Фотография отеля GreenTree Inn." width="300" height="212">
                         <h3 class="hotel_title">GreenTree Inn</h3></a>
                         <div class="card-content-wrapper">
                           <span class="hotel_type">Гостиница</span>
