--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="main_index main-container">
       <div class="page-container">
         <h1 class="visually-hidden"> Welcome to Sedona </h1>
-        <img src="images/Wellcome-photo.jpg" alt="Фон приветственной фотографии Седоны." class="welcome_photo" width="1200" height="485">
+        <img src="images/welcome-photo.jpg" alt="Фон приветственной фотографии Седоны." class="welcome_photo" width="1200" height="485">
         <div class="advantages">
           <h2 class="sedona_short_description"> Седона — небольшой городок в Аризоне,<br> заслуживающий большего! </h2>
           <p class="advantages_intro">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
